; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_set_string_video_rate.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_set_string_video_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"Unable to parse option value \22%s\22 as video rate\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i8*, i32*)* @set_string_video_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_string_video_rate(i8* %0, i32* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %4
  %13 = load i32, i32* @EINVAL, align 4
  %14 = call i32 @AVERROR(i32 %13)
  store i32 %14, i32* %9, align 4
  br label %19

15:                                               ; preds = %4
  %16 = load i32*, i32** %8, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @av_parse_video_rate(i32* %16, i8* %17)
  store i32 %18, i32* %9, align 4
  br label %19

19:                                               ; preds = %15, %12
  %20 = load i32, i32* %9, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %19
  %23 = load i8*, i8** %5, align 8
  %24 = load i32, i32* @AV_LOG_ERROR, align 4
  %25 = load i8*, i8** %7, align 8
  %26 = call i32 @av_log(i8* %23, i32 %24, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i8* %25)
  br label %27

27:                                               ; preds = %22, %19
  %28 = load i32, i32* %9, align 4
  ret i32 %28
}

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @av_parse_video_rate(i32*, i8*) #1

declare dso_local i32 @av_log(i8*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
